--- a/dist.ini
+++ b/dist.ini
@@ -18,5 +18,5 @@ repository=http://github.com/sharyanto/perl-Perinci-Sub-DepUtil
 Rinci=1.1.33
 
 perl=5.010001
-;Perinci::Sub::Wrapper=0.36
-;Rinci::Schema=1.1.32.1
+Perinci::Sub::DepChecker=0.07
+Rinci::Schema=1.1.32.1
