--- a/dist.ini
+++ b/dist.ini
@@ -10,6 +10,7 @@ homepage=http://metacpan.org/release/Perinci-Sub-DepUtil
 repository=http://github.com/sharyanto/perl-Perinci-Sub-DepUtil
 
 [@SHARYANTO]
+:version=0.09
 
 [Prereqs / TestRequires]
 
