--- a/dist.ini
+++ b/dist.ini
@@ -8,9 +8,10 @@ name=Perinci-Sub-DepUtil
 [Prereqs / TestRequires]
 
 [Prereqs]
-;!lint_prereqs assume-used # spec
-Rinci=1.1.33
-
 perl=5.010001
 Perinci::Sub::DepChecker=0.07
 Sah::Schema::Rinci=1.1.44
+
+[Prereqs / DevelopRecommends]
+;!lint_prereqs assume-used # spec
+Rinci=1.1.33
