--- a/dist.ini
+++ b/dist.ini
@@ -9,9 +9,13 @@ name=Perinci-Sub-DepUtil
 
 [Prereqs]
 perl=5.010001
+strict=0
+warnings=0
+Exporter=0
 Perinci::Sub::DepChecker=0.07
 Sah::Schema::Rinci=1.1.44
 
 [Prereqs / DevelopRecommends]
 ;!lint_prereqs assume-used # spec
 Rinci=1.1.33
+
