--- a/dist.ini
+++ b/dist.ini
@@ -13,9 +13,8 @@ strict=0
 warnings=0
 Exporter=0
 Perinci::Sub::DepChecker=0.07
-Sah::Schema::Rinci=1.1.44
+Sah::Schema::rinci::function_meta=1.1.80
 
 [Prereqs / DevelopRecommends]
 ;!lint_prereqs assume-used # spec
 Rinci=1.1.33
-
